# nonebot-adapter-claweixin

./: .gitignore  README.md  pyproject.toml
nonebot/adapter/claweixin/: adapter.py  bot.py  config.py  event.py  exception.py  login.py  message.py  utils.py
nonebot/adapters/claweixin/: adapter.py  bot.py  config.py  event.py  login.py  message.py  utils.py
nonebot/adapters/claweixin/api/: __init__.py  api.py  media.py  mime.py  send.py
nonebot/adapters/claweixin/api/cdn/: __init__.py  aes_ecb.py  download.py  upload.py  url.py
