[project]
name = "nonebot-adapter-claweixin"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "5656565566", email = "2393963330@qq.com"},
]
dependencies = [
    "nonebot2>=2.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
