[project]
name = "nonebot-adapter-claweixin"
version = "0.1.0"
description = "一个 nonebot 的 微信 clawbot 协议适配器"
authors = [
    {name = "5656565566", email = "2393963330@qq.com"},
]
dependencies = [
    "nonebot2>=2.4.2,<3.0.0"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/5656565566/nonebot-adapter-claweixin"
repository = "https://github.com/5656565566/nonebot-adapter-claweixin"

[tool.pdm.build]
includes = ["nonebot",]
package-dir = "."

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false