[project]
name = "nonebot-adapter-claweixin"
version = "0.1.10"
description = "一个 nonebot 的 微信 clawbot 协议适配器"
authors = [
    {name = "5656565566", email = "2393963330@qq.com"},
]
dependencies = [
    "nonebot2>=2.4.2,<3.0.0",
    "cryptography>=46.0.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/5656565566/nonebot-adapter-claweixin"
repository = "https://github.com/5656565566/nonebot-adapter-claweixin"

[project.scripts]
claweixin-login = "nonebot.adapters.claweixin.login:main"

[project.entry-points.nb_scripts]
claweixin-login = "nonebot.adapters.claweixin.login:main"

[project.optional-dependencies]
qrcode = ["qrcode>=8.2"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "I",     # isort
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "TID",   # flake8-tidy-imports
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
]

[tool.pdm.build]
includes = ["nonebot",]
package-dir = "."

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false